--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 form {
     margin: 0;
 }
-input:focus {
+input:focus, input:hover {
     border: solid 1px crimson;
     padding: 20px;
     margin: 10px 2px 10px 8px;
@@ -31,7 +31,7 @@ input:focus {
 input {
     padding: 20px;
     border: solid 1px rgba(220, 20, 60, 0.52);
-    margin: 10px 5px;
+    margin: 10px 0;
 }
 
 li:hover {
@@ -52,4 +52,16 @@ li {
 ul {
     margin: 0;
     padding: 0;
+}
+
+li > span {
+    float: right;
+    border: solid 1px crimson;
+    border-radius: 50%;
+    padding: 5px;
+    width: 7px;
+    height: 7px;
+    line-height: 5px;
+    color: crimson;
+    cursor: pointer;
 }
