--- a/style.css
+++ b/style.css
@@ -45,8 +45,18 @@ li {
     list-style: none;
     border: solid 1px rgba(220, 20, 60, 0.52);
     margin: 3px 0;
-    padding: 20px;
     color: gray;
+}
+
+.list-elem-head {
+    float: left;
+    margin: 20px;
+}
+
+.list-elem-body {
+    margin-left: 50px;
+    padding: 20px 20px 20px 20px;
+    border-left: solid 1px crimson;
 }
 
 ul {
@@ -54,11 +64,11 @@ ul {
     padding: 0;
 }
 
-li > span:not(.delete) {
+li > span.text {
     padding-right: 20px;
 }
 
-li > span.delete {
+li > div > span.delete {
     float: right;
     border: solid 1px crimson;
     border-radius: 50%;
