--- a/style.css
+++ b/style.css
@@ -22,9 +22,7 @@ form {
 }
 input:focus, input:hover {
     border: solid 1px crimson;
-    padding: 20px;
-    margin: 10px 2px 10px 8px;
-    box-shadow: 0 0 2px -1px crimson;
+    box-shadow: 0 0 5px -1px crimson;
     background-color: rgba(220, 20, 60, 0.05);
 }
 
@@ -32,13 +30,14 @@ input {
     padding: 20px;
     border: solid 1px rgba(220, 20, 60, 0.52);
     margin: 10px 0;
+    transition: box-shadow 1s, background-color 2s;
 }
 
 li:hover {
     border: solid 1px rgba(220, 20, 60, 0.8);
     background-color: rgba(220, 20, 60, 0.05);
     box-shadow: 0 0 2px -1px crimson;
-    margin: 3px -3px 3px 3px;
+    margin: 3px 0 3px 10px;
 }
 
 li {
@@ -46,6 +45,7 @@ li {
     border: solid 1px rgba(220, 20, 60, 0.52);
     margin: 3px 0;
     color: gray;
+    transition: margin 0.5s, background-color 2s;
 }
 
 .list-elem-head {
@@ -56,7 +56,7 @@ li {
 .list-elem-body {
     margin-left: 50px;
     padding: 20px 20px 20px 20px;
-    border-left: solid 1px crimson;
+    border-left: solid 1px rgba(220, 20, 60, 0.52);
 }
 
 ul {
