Select of delete button impossible

--- a/style.css
+++ b/style.css
@@ -78,4 +78,8 @@ li > div > span.delete {
     line-height: 5px;
     color: crimson;
     cursor: pointer;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select:none;
+    user-select:none;
 }
